# metamersion-latent

./: .gitignore  README.md  pyproject.toml  requirements.txt
frontend/: gui_chat.py
metamersion_latent/: gpt3_helper.py  oh_sheet.py
metamersion_latent/audio/: clip.py  example_bad.py  example_good.py  my_tortoise.py  tts.py
metamersion_latent/configs/chat/: example.py  girard_therapist.py  ls1_jz1.py  ls1_version_1.py  ls1_version_2.py  ls1_version_3.py  ls1_version_4.1_inonly.py  ls1_version_4.2oldintro.py  ls1_version_4.py  ls1_version_4_2_w_exit.py  ls1_version_4_3_w_exit.py  ls1_version_4_4_w_exit.py  ls1_version_4_exp.py  ls1_version_4_inonly.py  ls1_version_5.py  ls1_version_5_watts.py  ls1_version_6.py  ls1_version_6_AI21.py  ls1_version_7-davinci.py  meeting_example.py  minimal_working_example.py  zach1.py  zach1_j1.py
metamersion_latent/configs/metacritic/: machine_critic_v1.py
metamersion_latent/controller/: analyze_chat.py  c1_analyze_chat.py  c2_generate_movie.py  c3_inject_movies_etc.py  c3_inject_movies_octi_vimeo.py  c4_upload_movie.py  cx_cleanup.py  cy_extract_chats_human_readable.py  generate_movie.py
metamersion_latent/examples/analysis/: Caligula.yaml  Niklas.yaml
metamersion_latent/frontend/: OLD_gui_chat_REVIEW.py  email_gui_chat.py  exit_gui_chat.py  exit_gui_chat_REVIEW.py  gui_chat.py  gui_chat_zachmac.py
metamersion_latent/image_generation/: first_run.py  first_run_local.py  gen_images_latentblending.py  get_img_remote.py  install_dependencies.sh  parallel_stub.py  readme_run_server_local_multi.txt  run_local_server.py  run_remote_server.py  scp_to_remote.sh  setup_remote.sh  stability.py
metamersion_latent/infrastructure/: mount_ls1.sh  mount_ls1.txt
metamersion_latent/llm/: analysis.py  chat.py  config.py  metacritic.py
metamersion_latent/tools/: chatbot.py  exit_chatbot.py  run_card.py  run_cards.sh  run_chat.py  run_chats.sh  test.py  testing.py
metamersion_latent/utils/: __init__.py  master_prompter.py  oh_sheet.py  translation.py
tests/: test_chat.py  test_metacritic.py  test_metamersion_latent.py  test_utils.py
(+47 files in other folders)
