[tool.poetry]
name = "metamersion-latent"
version = "0.1.0"
description = ""
authors = ["elacosse <eric.lacosse@research.fchampalimaud.org>"]

[tool.poetry.dependencies]
python = "^3.9"
google-api-python-client = "^2.70.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^0.8.0"
pandas = "^1.5.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
